--- a/Sensor-App/Support/Info.plist
+++ b/Sensor-App/Support/Info.plist
@@ -2,6 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>Alternative-1</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>Alternative-1</string>
+				</array>
+			</dict>
+			<key>Alternative-2</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>Alternative-2</string>
+				</array>
+			</dict>
+		</dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array/>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
