--- a/Sensor-App-WatchApp/Info.plist
+++ b/Sensor-App-WatchApp/Info.plist
@@ -25,9 +25,11 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>WKApplication</key>
+	<true/>
 	<key>WKCompanionAppBundleIdentifier</key>
 	<string>VolkerSchmitt88-at-icloud.com.Sensor-App</string>
 	<key>WKWatchKitApp</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
