--- a/Sensor-App-Framework/ReleaseNotes/de.lproj/ReleaseNotes.json
+++ b/Sensor-App-Framework/ReleaseNotes/de.lproj/ReleaseNotes.json
@@ -82,7 +82,7 @@
         "notes":
         [
             "Release Notes wurden hinzugefügt",
-            ".csv Export wurde verbessert",
+            ".csv Export wurde verbessert"
         ]
     },
     {
@@ -91,7 +91,15 @@
         "notes":
         [
             "Alternative App Icons hinzugefügt",
-            "Kleinere Fehler wurden behoben",
+            "Kleinere Fehler wurden behoben"
+        ]
+    },
+    {
+        "id": 11,
+        "version": "4.0.0",
+        "notes":
+        [
+            "Requires minimum iOS 16 and watchOS 9"
         ]
     }
 ]
