#84 - Fix Watch Issue for App Store Connect

--- a/Sensor-App-WatchApp/Support/Info.plist
+++ b/Sensor-App-WatchApp/Support/Info.plist
@@ -29,7 +29,7 @@
 	<true/>
 	<key>WKCompanionAppBundleIdentifier</key>
 	<string>VolkerSchmitt88-at-icloud.com.Sensor-App</string>
-	<key>WKWatchKitApp</key>
+	<key>WKRunsIndependentlyOfCompanionApp</key>
 	<false/>
 </dict>
 </plist>
