--- a/Sensor-App-Framework/ReleaseNotes/de.lproj/ReleaseNotes.json
+++ b/Sensor-App-Framework/ReleaseNotes/de.lproj/ReleaseNotes.json
@@ -99,7 +99,9 @@
         "version": "4.0.0",
         "notes":
         [
-            "Requires minimum iOS 16 and watchOS 9"
+            "Benötigt minimum iOS 16 und watchOS 9",
+            "Überarbeitete Navigation",
+            "Zusätzliche Einstellungen für Karte"
         ]
     }
 ]
