--- a/Sensor-App-Framework/ReleaseNotes/en.lproj/ReleaseNotes.json
+++ b/Sensor-App-Framework/ReleaseNotes/en.lproj/ReleaseNotes.json
@@ -99,7 +99,9 @@
         "version": "4.0.0",
         "notes":
         [
-            "Requires minimum iOS 16 and watchOS 9"
+            "Requires minimum iOS 16 and watchOS 9",
+            "Reworked Navigation",
+            "Additional Settings for Map"
         ]
     }
 ]
