--- a/Sensor-App-Framework/ReleaseNotes/de.lproj/ReleaseNotes.json
+++ b/Sensor-App-Framework/ReleaseNotes/de.lproj/ReleaseNotes.json
@@ -109,7 +109,8 @@
         "version": "5.0.0",
         "notes":
         [
-            "Benötigt minimum iOS 18 und watchOS 11"
+            "Benötigt minimum iOS 18 und watchOS 11",
+            "Performance Verbesserungen und bug fixes"
         ]
     }
 ]
