--- a/Sensor-App-Framework/ReleaseNotes/en.lproj/ReleaseNotes.json
+++ b/Sensor-App-Framework/ReleaseNotes/en.lproj/ReleaseNotes.json
@@ -109,7 +109,8 @@
         "version": "5.0.0",
         "notes":
         [
-            "Requires minimum iOS 18 and watchOS 11"
+            "Requires minimum iOS 18 and watchOS 11",
+            "Performance improvements an bug fixes"
         ]
     }
 ]
