--- a/Configuration/General.xcconfig
+++ b/Configuration/General.xcconfig
@@ -1,5 +1,5 @@
 //
-//  Versioning.xcconfig
+//  General.xcconfig
 //  Sensor-App
 //
 //  Created by Volker Schmitt on 12.09.2024.
@@ -9,7 +9,7 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 // Versioning
-MY_BUILD_VERSION = 20241126.1
+MY_BUILD_VERSION = 20241130.1
 MY_VERSION = 5.0.0
 
 // Deployment Targets for Swiftlint
