--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-WatchApp (de).xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-WatchApp (de).xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1527B04624C4AA620024DD78"
-               BuildableName = "Sensor-App-Watch.app"
+               BuildableName = "Sensor-App.app"
                BlueprintName = "Sensor-App-Watch"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
@@ -85,7 +85,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1527B04624C4AA620024DD78"
-            BuildableName = "Sensor-App-Watch.app"
+            BuildableName = "Sensor-App.app"
             BlueprintName = "Sensor-App-Watch"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
@@ -102,7 +102,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1527B04624C4AA620024DD78"
-            BuildableName = "Sensor-App-Watch.app"
+            BuildableName = "Sensor-App.app"
             BlueprintName = "Sensor-App-Watch"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
