Add dummy bundle identifier

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# Secrets for Bundle Identifier
+Secret.xcconfig
