--- a/Configuration/Debug.xcconfig
+++ b/Configuration/Debug.xcconfig
@@ -9,8 +9,8 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 #include "General.xcconfig"
+#include? "Secret.xcconfig"
 
-// MARK: - DEBUG-specific settings
-BUNDLE_IDENTIFIER = VolkerSchmitt88-at-icloud.com.Sensor-App.dev
+// MARK: - DEBUG-Specific settings
 APP_DISPLAY_NAME = Sensor-App
 PRIMARY_APP_ICON = AppIcon-V1
