--- a/Configuration/Release.xcconfig
+++ b/Configuration/Release.xcconfig
@@ -11,6 +11,6 @@
 #include "General.xcconfig"
 #include? "Secret.xcconfig"
 
-// MARK: - RELEASE-specific settings
+// RELEASE-specific settings
 APP_DISPLAY_NAME = Sensor-App
 PRIMARY_APP_ICON = AppIcon-V3
