--- a/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-watchOS.xcscheme
+++ b/Sensor-App.xcodeproj/xcshareddata/xcschemes/Sensor-App-watchOS.xcscheme
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1620"
+   LastUpgradeVersion = "1640"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1527B04624C4AA620024DD78"
+               BuildableName = "Sensor-App.app"
+               BlueprintName = "Sensor-App-Watch"
+               ReferencedContainer = "container:Sensor-App.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -29,37 +43,25 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Tests/0_Test Plans/iOS_UnitTest.xctestplan"
+            reference = "container:Tests/0_Test Plans/watchOS_FullTest.xctestplan"
             default = "YES">
          </TestPlanReference>
          <TestPlanReference
-            reference = "container:Tests/0_Test Plans/iOS_UITest.xctestplan">
+            reference = "container:Tests/0_Test Plans/watchOS_ScreenshotTest.xctestplan">
          </TestPlanReference>
          <TestPlanReference
-            reference = "container:Tests/0_Test Plans/iOS_ScreenshotTest.xctestplan">
-         </TestPlanReference>
-         <TestPlanReference
-            reference = "container:Tests/0_Test Plans/iOS_FullTest.xctestplan">
+            reference = "container:Tests/0_Test Plans/watchOS_UITest.xctestplan">
          </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1527B02724C4AA240024DD78"
-               BuildableName = "Sensor-AppiOSUnitTests.xctest"
-               BlueprintName = "Sensor-AppiOSUnitTests"
-               ReferencedContainer = "container:Sensor-App.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1527B03224C4AA240024DD78"
-               BuildableName = "Sensor-AppiOSUITests.xctest"
-               BlueprintName = "Sensor-AppiOSUITests"
+               BlueprintIdentifier = "15F1BBA82CAFCF1E00C80A1F"
+               BuildableName = "Sensor-AppwatchOSUITests.xctest"
+               BlueprintName = "Sensor-AppwatchOSUITests"
                ReferencedContainer = "container:Sensor-App.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -69,21 +71,22 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = "de"
-      region = "DE"
+      language = "en"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      showNonLocalizedStrings = "YES"
+      notificationPayloadFile = "Sensor-App-WatchApp/Miscellaneous/PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1527B01624C4AA240024DD78"
+            BlueprintIdentifier = "1527B04624C4AA620024DD78"
             BuildableName = "Sensor-App.app"
-            BlueprintName = "Sensor-App"
+            BlueprintName = "Sensor-App-Watch"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -98,9 +101,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1527B01624C4AA240024DD78"
+            BlueprintIdentifier = "1527B04624C4AA620024DD78"
             BuildableName = "Sensor-App.app"
-            BlueprintName = "Sensor-App"
+            BlueprintName = "Sensor-App-Watch"
             ReferencedContainer = "container:Sensor-App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
