--- a/Sensor-App/Miscellaneous/Info.plist
+++ b/Sensor-App/Miscellaneous/Info.plist
@@ -2,6 +2,48 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>AppIcon-V1</key>
+			<dict>
+				<key>CFBundleIconName</key>
+				<string>AppIcon-V1</string>
+			</dict>
+			<key>AppIcon-V2</key>
+			<dict>
+				<key>CFBundleIconName</key>
+				<string>AppIcon-V2</string>
+			</dict>
+			<key>AppIcon-V3</key>
+			<dict>
+				<key>CFBundleIconName</key>
+				<string>AppIcon-V3</string>
+			</dict>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundleAlternateIcons</key>
+		<dict>
+			<key>AppIcon-V1</key>
+			<dict>
+				<key>CFBundleIconName</key>
+				<string>AppIcon-V1</string>
+			</dict>
+			<key>AppIcon-V2</key>
+			<dict>
+				<key>CFBundleIconName</key>
+				<string>AppIcon-V2</string>
+			</dict>
+			<key>AppIcon-V3</key>
+			<dict>
+				<key>CFBundleIconName</key>
+				<string>AppIcon-V3</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
