Update Copyright and versioning setting

--- a/Configuration/General.xcconfig
+++ b/Configuration/General.xcconfig
@@ -9,8 +9,8 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 // Versioning
-MY_BUILD_VERSION = 20250627.1
-MY_VERSION = 6.0.0
+CURRENT_PROJECT_VERSION = 20250627.1
+MARKETING_VERSION = 6.0.0
 
 // Secrets
 //
